--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,2 @@
 jenkins_2.346.3-2-lts-jdk8_amd64.tar filter=lfs diff=lfs merge=lfs -text
+alpine_3.18_amd64.tar.gz filter=lfs diff=lfs merge=lfs -text
