--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,3 @@
 jenkins_2.346.3-2-lts-jdk8_amd64.tar filter=lfs diff=lfs merge=lfs -text
 alpine_3.18_amd64.tar.gz filter=lfs diff=lfs merge=lfs -text
+python_3.9.17-slim-bullseye-amd64.tar.gz filter=lfs diff=lfs merge=lfs -text
