--- a/.gitattributes
+++ b/.gitattributes
@@ -2,3 +2,4 @@ jenkins_2.346.3-2-lts-jdk8_amd64.tar filter=lfs diff=lfs merge=lfs -text
 alpine_3.18_amd64.tar.gz filter=lfs diff=lfs merge=lfs -text
 python_3.9.17-slim-bullseye-amd64.tar.gz filter=lfs diff=lfs merge=lfs -text
 prometheus-latest-amd64.tar.gz filter=lfs diff=lfs merge=lfs -text
+grafana-10.0.0-amd64.tar.gz filter=lfs diff=lfs merge=lfs -text
